# inlay-juce-module

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
docs/: inlay_product_unlocking.md
examples/: CMakeLists.txt
examples/ArpeggiatorTutorial/: ArpeggiatorTutorial.jucer  CMakeLists.txt
examples/ArpeggiatorTutorial/Source/: Arpeggiator.cpp  Arpeggiator.h  ArpeggiatorEditor.cpp  ArpeggiatorEditor.h  Main.cpp
modules/inlay_product_unlocking/: DefaultUI.cpp  DefaultUI.h  Unlocker.cpp  Unlocker.h  inlay_product_unlocking.cpp  inlay_product_unlocking.h  juce_module_info
modules/inlay_product_unlocking/internal/: Api.cpp  Api.h  AuthCallbackListener.cpp  AuthCallbackListener.h  SignatureVerification.cpp  SignatureVerification.h  Tests.cpp  TokenValidator.cpp  TokenValidator.h  UnlockerImpl.cpp  UnlockerImpl.h
tests/: CMakeLists.txt
tests/UnitTestsRunner/: UnitTestsRunner.jucer  main.cpp
